# fastapi-postgres

./: .dockerignore  .env.dev  .env.example  .gitignore  CITATION.cff  Dockerfile  README.md  alembic.ini  app.py  db.dump  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 01287b1dbe00_first_migration.py  175fadf05d95_create_tables.py  1c802cede958_initdds.py  23741f9d2a5b_add_nallable_on_user_model.py  3ad3acf90a9f_init.py  426ffe289346_initdds.py  4302877b74df_add_nallable.py  567d6921bad7_create_tables.py  5c48ff2fd5fa_init.py  69dc155bc443_init.py  6cdb431513de_first_migration.py  80e466156c24_initddscc.py  b7a5ebb8d71d_initddscc.py  cca15d0636f8_update_user_model.py  ea2a0aec719b_create_tables.py
auth/: deps.py  jwt_bearer.py  jwt_handler.py
config/: config.py
dao/: __init__.py  dao_posts.py  dao_users.py
database/: base.py  database.py
database/dao/: dao_posts.py  dao_users.py
middleware/: middleware.py
models/: __init__.py  posts.py  users.py
routes/: posts.py  users.py
schemas/: posts.py  users.py
tests/: setup.py  test_users.py
