[tool.poetry]
name = "fastapi-postgres"
version = "0.1.0"
description = "Template for building FastAPI Asynchronous applications with PostgreSQL"
authors = ["Darix SAMANI SIEWE <samanidarix@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
